--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -11,7 +11,7 @@
           <span>Mark all as read</span>
         </button>
         <mat-divider></mat-divider>
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/notifications/settings">
           <mat-icon>settings</mat-icon>
           <span>Notification settings</span>
         </button>
